--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>React - Webpack</title>
+  <meta charset="UTF-8">
+  <title>React - Webpack</title>
+  <link rel="icon"
+        type="image/png"
+        href="https://cdn.auth0.com/blog/react-js/react.png">
 </head>
 <body>
-    <div id="app"></div>
-    <script src="/app/bundle.js"></script>
+  <div id="app"></div>
+  <script src="/app/bundle.js"></script>
 </body>
 </html>
